[package]
name = "tender"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tender"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.13.2", features = ["no-entrypoint"] }
